compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/topLevelDifferentFiles.kt
// FILE: a.kt
<!CONFLICTING_PLATFORM_DECLARATIONS!>val x = 1<!>

// FILE: b.kt
<!CONFLICTING_PLATFORM_DECLARATIONS!>fun getX() = 1<!>